...
        )
    }

    var body: some View {
        TabView(selection: tabSelection) {
            CurrentWorkoutView()
                .tabItem { Label("Home", systemImage: "list.clipboard") }
                .tag(0)
            MovementCatalogView()
                .tabItem { Label("Catalog", systemImage: "book.closed") }
                .tag(1)
            WorkoutHistoryView()
                .tabItem { Label("History", systemImage: "calendar") }
...
